[package]
name = "collectivity"
description = "Generic collection traits"
version = "3.2.2"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/crate/collectivity/3.2.2"
repository = "https://github.com/Togedo/collectivity"

authors = ["James Daab <james@togedo.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "4.0.2", optional = true }
serde_json = { version = "1.0.64", optional = true }
simd-json = { version = "0.4.3", optional = true }
slab = { version = "0.4.2", optional = true }
smallvec = { version = "1.6.1", optional = true }

[features]
default = ["std"]
std = []
